2001-05-29  Ryan Nunn <triforce@merlin.net.au>
	* audio/midi_drivers/win_midiout.cc : Fixed a spelling error
	* gumps/AudioOptions_gump.cc : Fixed reverb & chorus config problem

2001-05-29  Dancer Vesperman <dancer@users.sourceforge.net>
	- Code Nazi
	* Timidity_binary.cc: std::strcpy
	* gumps/Newfile_gump.cc: std::strcpy,std::strcat,std::memcpy,std::memset
	* tools/shp2pcx.cc: std::memset
	* tools/splitshp.cc: std:: strcpy/strrchr/memcpy/strlen
	* usecode/compiler/ucparse.yy: std::strlen,std::strcpy,std::strcat
	* usecode/compiler/ucmain.cc: std::strlen,std::strcpy,std::strrchr
	* usecode/compiler/ucfun.cc: std::strlen,std::memcpy
	* usecode/compiler/ucloc.cc: std::strlen,std::strcpy,std::strlen
	* usecode/compiler/ucsym.cc: std::strcmp
	* ... you get the idea ...

2001-05-29  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: DON'T close all gumps when casting a spell.
	* effects.cc (Death_vortex): Death Vortex spell implemented.

2001-05-28  Dancer Vesperman <dancer@users.sourceforge.net>
	* actors.cc: uninline static method called from external translation
		units. (Otherwise we cannot link under some compilers. Duh)
	** Double extra bonus points. We now fully compile and link under G++
	   version 3.0 (at least, so far)

2001-05-28  Dancer Vesperman <dancer@users.sourceforge.net>
	* mapedit/shapelst.cc: std::cout,std::endl
	* audio/midi_drivers/Timidity_binary.cc: std::cout,std::endl,
		std::string
	* audio/midi_drivers/Timidity_binary.h: std::string
	* mapedit/paledit.cc: std::cout,std::endl,include iostream
	* mapedit/shapetest.cc: std::cout,std::endl,include iostream
2001-05-28  Jeff Freedman  <jeff@amy.nerble.net>
	* actors.cc: 'Stop Time' spell implemented.

2001-05-26  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.h: 'Mode' field has gone away.  RIP.  Use
	showing_gumps() to test for gump mode.

2001-05-25  Tristan Tarrant  <nadir@users.sourceforge.net>

	* exult.cc: Added 400x300 to resolution cycler as requested on 
	Jackchaos
