@@ -1,3 +1,7 @@
+2001-05-30  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Added 'server' directory (only needed for XWIN).
+
 2001-05-29  Ryan Nunn <triforce@merlin.net.au>
 	* audio/midi_drivers/win_midiout.cc : Fixed a spelling error
 	* gumps/AudioOptions_gump.cc : Fixed reverb & chorus config problem
